# ipa_lcrob

./: README.md  boost_conv.sh  stack.xml
ExtendedDevice/: AndroidManifest.xml
ExtendedDevice/res/layout/: activity_main.xml
ExtendedDevice/res/values/: strings.xml
ExtendedDevice/res/xml/: device_filter.xml
ipa_odroidx_interface/: CMakeLists.txt  avrlib_patched.tar  mainpage.dox  manifest.xml
ipa_odroidx_interface/mc/: ARMInterface.elf  ARMInterface.hex  Makefile  flashdump.hex
ipa_odroidx_interface/mc/include/: global.h  protocol.h  soft_spi.h
ipa_odroidx_interface/mc/src/: protocol.c  soft_spi.c
ipa_odroidx_interface/ros/src/: avr_interface.py  odroidx_interface.py  test.py
ipa_odroidx_interface/srv/: MotorAim.srv
ipa_odroidx_open_interface/mc/: Makefile  avrproj_make
ipa_odroidx_open_interface/mc/include/: mcontroller.h  protocol.h  softuart.h  uart.h
ipa_odroidx_open_interface/mc/src/: main.c  mcontroller.c  protocol.c  softuart.c  uart.c
ipa_odroidx_ultrasonic_interface/: CMakeLists.txt  mainpage.dox  manifest.xml
ipa_odroidx_ultrasonic_interface/doc/: pin_mapping.ods
ipa_odroidx_ultrasonic_interface/launch/: us_driver.launch
ipa_odroidx_ultrasonic_interface/mc/: Makefile
ipa_odroidx_ultrasonic_interface/mc/include/: definitions.h  helper.h  iocompat.h  protocol.h  softuart.h
ipa_odroidx_ultrasonic_interface/mc/src/: helper.c  main.c  softuart.c
ipa_odroidx_ultrasonic_interface/msg/: ExRange.msg  ExRangeArray.msg
ipa_odroidx_ultrasonic_interface/ros/config/: sample.yaml
ipa_odroidx_ultrasonic_interface/ros/include/ipa_odroidx_ultrasonic_interface/: CommPortDriver.h  UARTDriver.h
ipa_odroidx_ultrasonic_interface/ros/src/: UARTDriver.cpp  us_driver.cpp
lcrob1_description/: mainpage.dox  manifest.xml
lcrob1_description/launch/: create_empty_world.launch  create_mobile_base.launch
lcrob1_description/urdf/: create.urdf.xacro  create_base.xacro
lcrob1_simulation/: CMakeLists.txt  mainpage.dox  manifest.xml
lcrob1_simulation/launch/: ipa_create_simulation.launch
lcrob1_simulation/src/: range_to_exrange.cpp
mobina_apps/ExtendedDevice/: .project
mobina_description/: mainpage.dox  manifest.xml
mobina_description/robots/: mobina.urdf.xacro
mobina_description/urdf/: asus_xtion_pro.urdf.xacro  mobina_body.urdf.xacro  mobina_calibration.xacro  mobina_hardware.urdf.xacro
mobina_doc/: Schnelltest.odt  avrdude.conf  mainpage.dox  manifest.xml
mobina_interface/: ExtendedDevice.tar.bz2  autostart.sh  mainpage.dox  manifest.xml
mobina_interface/ros/config/: joint_configurations.yaml  light.yaml  teleop.yaml
mobina_interface/ros/launch/: avr_intf.launch  bringup.launch  dashboard.launch  gyro.launch  kinect.launch  kinect2.launch  teleop.launch  teleop.launch~  teleop3.launch  upload_params.launch
mobina_interface/ros/src/: evjoy.py  evjoy2.py  evjoy3.py  fan_control.py  imu_driver.py  light_control.py  mobina.py  trajectory_control.py
mobina_interface/ros/test/: test_traj.py
mobina_states/: mainpage.dox  manifest.xml
mobina_states/ros/config/: navigation_goals.yaml  navigation_goals_ms_wissenschaft.yaml  tray_ms_wissenschaft.yaml
mobina_states/ros/launch/: MsWissenschaft.launch  MsWissenschaftParam.launch  call_to_launch.launch  deliver_cake.launch
quirl/src/: adc.c  adc.h  config.h  digio.c  interfaces.h  mot.c  mot.h  odo.c  odo.h  params.h  regtools.h  scheduler.c  scheduler.h  srf10.c  srf10.h  stdio_init.c  stdio_init.h  usart.h  utils.c  utils.h
spi_driver/: mainpage.dox  manifest.xml  setup.py
spi_driver/src/: c_gpio.c  c_gpio.h  py_gpio.c  spi.py  spi_test.py
tablobot/: doc.cfg
tablobot/bootloader/: chipdef.h  main.c  makefile  mega1280.h
tablobot/java/: build.xml  javadoc.cfg
tablobot/src/: adc.c  config.h  digio.c  digio.h  i2c.c  i2c.h  interfaces.h  mot.c  mot.h  params.h  regtools.h  scheduler.c  scheduler.h  srf10.c  srf10.h  stdio_init.c  stdio_init.h  usart.c  usart.h  utils.c  utils.h
(+50 files in other folders)
